--- a/docs/rconf/snippets/definitions/patches.toml
+++ b/docs/rconf/snippets/definitions/patches.toml
@@ -18,6 +18,8 @@ enabled      = true
     { op = "copy", path = "target_temp_case", from = "temp_targets.case" },
     { op = "test", path = "enabled", value = true },
     { op = "replace", path = "temp_targets.case", value = 75.0 },
+    { op = "merge", path = "ports", value = [8004, 8005] },
+    { op = "merge", path = "temp_targets", value = { lower = 7.0 } },
     { op = "add", path = "icon", value = { "$ref" = "https://api.github.com/emojis#/floppy_disk" } },
 ]
 
@@ -37,6 +39,8 @@ enabled      = true
     ["?", "enabled", true],                         # - test enabled
     # RFC 6902 notation                             # - replace 72.0 after copy
     { op = "replace", path = "temp_targets.case", value = 75.0 },
+    ["&", "ports", [8004, 8005]],                   # - merge ports with [8004, 8005]
+    ["&", "temp_targets", { lower = 7.0 }],         # - merge temp_targets with {...}
 ]
 # key/value-pair assignment                         # - assign using reference
 icon."$ref" = "https://api.github.com/emojis#/floppy_disk"
